Add basic balance view

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script src="%PUBLIC_URL%/js/stellar-base.min.js" charset="utf-8"></script>
+    <script src="%PUBLIC_URL%/js/stellar-sdk.min.js" charset="utf-8"></script>
     <script src="%PUBLIC_URL%/js/stellar-ledger-api.min.js" charset="utf-8"></script>
     <title>Stellar Fox</title>
   </head>
