--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
