--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://js.stripe.com/v3/"></script>
     <script src="%PUBLIC_URL%/js/stellar-ledger-api.min.js" charset="utf-8"></script>
     <script src="%PUBLIC_URL%/js/stellar-sdk.min.js" charset="utf-8"></script>
