--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
-
+        <meta name="description" content="Moving value at the speed of light">
+        <meta name="author" content="Stellar Fox">
+        
         <!-- Invalidate Caching -->
         <meta http-equiv="cache-control" content="no-cache" />
         <meta http-equiv="expires" content="0" />
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
 
+        <link rel="canonical" href="https://cygnus.stellarfox.net/">
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-        <title>Stellar Fox</title>
+        <title>Cygnus - Social Wallet</title>
     </head>
     <body>
         <noscript>
