--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
-        <meta name="description" content="Moving value at the speed of light">
-        <meta name="author" content="Stellar Fox">
-        
+        <meta name="description" content="Cygnus - Social Wallet">
+        <meta name="author" content="Cygnus">
+
         <!-- Invalidate Caching -->
         <meta http-equiv="cache-control" content="no-cache" />
         <meta http-equiv="expires" content="0" />
