--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="theme-color" content="#000000">
+        <meta name="theme-color" content="#F4B004">
         <meta name="description" content="Cygnus - Social Wallet">
-        <meta name="author" content="Cygnus">
+        <meta name="author" content="Stellar Fox">
 
         <!-- Invalidate Caching -->
         <meta http-equiv="cache-control" content="no-cache" />
