--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#F4B004">
-        <meta name="description" content="Cygnus - Social Wallet">
+        <meta name="description" content="cygnus social cryptocurrency wallet for stellar assets">
         <meta name="author" content="Stellar Fox">
 
         <!-- Invalidate Caching -->
@@ -13,6 +13,24 @@
         <meta http-equiv="expires" content="0" />
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
+
+        <!-- Begin Opengraph -->
+        <meta property="og:url" content="https://cygnus.stellarfox.net" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Cygnus - Social Wallet" />
+        <meta property="og:description" content="Secure, social cryptocurrency wallet for Stellar based assets. Designed for the ease of use and security." />
+        <meta property="og:image" content="https://i.imgsafe.org/fe/fec96046c0.png" />
+        <meta property="og:image:width" content="500" />
+        <meta property="og:image:height" content="500" />
+        <!-- End Opengraph -->
+
+        <!-- Begin Twitter Cards -->
+        <meta property="twitter:card" content="summary" />
+        <meta property="twitter:image" content="https://i.imgsafe.org/13/13a55eaa27.png" />
+        <meta property="twitter:site" content="@StellarFoxNet" />
+        <meta property="twitter:creator" content="@syntaxval" />
+        <!-- End Twitter Cards -->
+
 
         <link rel="canonical" href="https://cygnus.stellarfox.net/">
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
