--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="rgb(15, 46, 83)">
+    <meta name="apple-mobile-web-app-title" content="Cygnus">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="rgb(244,176,4)">
     <meta name="description" content="cygnus social cryptocurrency wallet for stellar assets">
